feat: Added findById message
